<resources>
    <string name="app_name">Epoch Architect</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="tlogin">Login</string>
    <string name="Rregister">Register</string>
    <string name="Rusername">Username</string>
    <string name="email">Email</string>
    <string name="rpassword">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="Rrregister">Register</string>
    <string name="Rlogin">Login</string>
    <string name="logo">Logo</string>
    <string name="welcome">Welcome to Epoch Architect</string>
    <string name="logos">logos</string>
    <string name="time_entry">Time Entry</string>
    <string name="goal">Daily Goals</string>
    <string name="logout">Logout</string>
    <string name="want_to_logout">Want to Logout?</string>
    <string name="click_here">Click here</string>
    <string name="add_category">Add Category</string>
    <string name="submit_entry">Submit Entry</string>
    <string name="start_time">Start Time</string>
    <string name="end_time">End Time</string>
    <string name="manual_time_entry">Manual Time Entry</string>
    <string name="category">Category</string>
    <string name="work_time">Work time</string>
    <string name="total_hours">Total hours</string>
    <string name="homepage">Homepage</string>
    <string name="add_goal">Add a daily goal:</string>
    <string name="add_goal_date">Please enter the date:</string>
    <string name="goal_date">Date</string>
    <string name="add_goal_min">Please enter the minimum hours to work:</string>
    <string name="goal_min">Minimum goal hours</string>
    <string name="add_goal_max">Please enter the maximum hours to work:</string>
    <string name="goal_max">Maximum goal hours</string>
    <string name="add_goal_click">Add</string>
    <string name="view_goal">View your daily goals here:</string>
    <string name="view_goal_click">View</string>
    <string name="view_photo">View Photo</string>
    <string name="date">Date:</string>
    <string name="description">Description</string>
    <string name="entries">Entries</string>
    <string name="category_name">Category Name</string>
    <string name="totalhours">Total Hours</string>
    <string name="add_photo_click">Add a Photo</string>
    <string name="category_category">Category</string>
    <string name="endtime">End Time</string>
    <string name="starttime">Start Time</string>
    <string name="description_description">Description</string>
    <string name="selected_date_format">%d-%02d-%02d</string>
    <string name="start">Start</string>
    <string name="timer_default">00:00</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="calculate">Calculate</string>
    <string name="graphs">Graphs</string>
    <string name="tasks">Tasks</string>
</resources>