<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_item1"
        android:title="@string/total_hours"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item2"
        android:title="@string/goal"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item3"
        android:title="@string/homepage"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item4"
        android:title="@string/time_entry"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item5"
        android:title="@string/graphs"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item6"
        android:title="@string/tasks"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item7"
        android:title="@string/logout"
        app:showAsAction="never"/>
</menu>